--- a/format.sty
+++ b/format.sty
@@ -1,5 +1,10 @@
 \usepackage[vmargin=1in,hmargin=1in]{geometry}
 \usepackage{lineno}
+\usepackage[T2A]{fontenc}
+\usepackage[utf8]{inputenc}
+\usepackage[dutch,english]{babel}
+\usepackage[T1]{fontenc}
+\usepackage{lmodern}
 \linenumbers
-\linespread{1.6}
+\linespread{1.3}
 \usepackage{times}
