--- a/hkm2014.md
+++ b/hkm2014.md
@@ -14,7 +14,7 @@ Environmental Determinants of Lake Trophic Status in the Conterminous United Sta
 
 Abstract
 --------
-Productivity of lentic ecosystems has been well studied and predicting the algal community response is known to be largely a function of nitrogen and phosphorus.   Most existing predictive models take advantage of this well studied relationship to predict chlorphyl a and lake trophic state.  While this provides reliable predictions, it requires *in situ* water quality data in order to paramterize the model.  This limits the application of these models to lakes with existing and, more importanly, available water quality data.  To expand our ability to predict in lakes without water quality data, we take advantage of the availability of a large national lakes water quality database, land use/land cover data, lake morphometry data, other universally available data, and modern data mining approaches to build and assess alternative models of lake tropic state that may be more universally applied.  We use random forests and random forest variable selection to identify variables to be used for predicting trophic status and we compare the classification accuracy of a variety of existing and novel models.  Adding in additional variables to the classic models of Chlorophyl *a* based trophic state improves predictions only by a small percentage.  Models based on universally available data alone are able to predict trophic state   
+Productivity of lentic ecosystems has been well studied and predicting the algal community response is known to be largely a function of nitrogen and phosphorus.   Most existing predictive models take advantage of this well studied relationship to predict chlorphyl a and lake trophic state.  While this provides reliable predictions, it requires *in situ* water quality data in order to paramterize the model.  This limits the application of these models to lakes with existing and, more importanly, available water quality data.  To expand our ability to predict in lakes without water quality data, we take advantage of the availability of a large national lakes water quality database, land use/land cover data, lake morphometry data, other universally available data, and modern data mining approaches to build and assess alternative models of lake tropic state that may be more universally applied.  We use random forests and random forest variable selection to identify variables to be used for predicting trophic status and we compare the classification accuracy of a variety of existing and novel models.  Adding in additional variables to the classic models of Chlorophyl *a* based trophic state improves predictions only by a small percentage.  Models based on nutrients alone predict trophic state with and average of XX% accuracy.  Models build with universally available data alone are able to correctluy predict trophic state, on average, xx% of the time.   
 
 
 
