--- a/tempAnalysis.Rmd
+++ b/tempAnalysis.Rmd
@@ -114,13 +114,14 @@ For the Random Forest analysis we need a response variable.  For now just just t
 ```{r run_varSelRFBoot, echo=FALSE, cache=TRUE} 
 #run for all GIS predictors
 	#intial conditions:
-		NTREE<-1000 #(10000) number of trees for first run
-		Niterations<-500 #(5000) number of trees for subsequent runs
-		dropNum<-1 # number of variables to drop after each iteration
+		NTREE<-100 #(1000) number of trees for first run
+		Niterations<-50 #(500) number of trees for subsequent runs
+		dropNum<-2 # number of variables to drop after each iteration
 		numBoot<-2 #number of times to bootrstrap the rf
 	
 	#select complete cases
-		keep<-complete.cases(Pgis,TS_CHLA)
+		#keep<-complete.cases(Pgis,TS_CHLA)
+		keep<-c(1:100)
 	
 	#run rfBoot
 		rfGIS<-varSelRF(Pgis[keep,],TS_CHLA[keep],ntree=NTREE,ntreeIterat=Niterations,
