more draft manuscript

--- a/hkm2014.bib
+++ b/hkm2014.bib
@@ -1,3 +1,10 @@
+@Manual{diaz-uriarte2010varSelRF,
+    title = {varSelRF: Variable selection using random forests},
+    author = {Ramon Diaz-Uriarte},
+    year = {2010},
+    note = {R package version 0.7-3},
+    url = {http://CRAN.R-project.org/package=varSelRF},
+  }
 
 @article{lu_environmental_2013,
 	title = {Environmental factors influencing cyanobacteria community structure in Dongping Lake, China},
@@ -27,6 +34,14 @@
 	year = {2013},
 	pages = {303--327}
 }
+
+@Manual{hollister2013lakemorpho,
+    title = {lakemorpho: Lake morphometry in R},
+    author = {Jeffrey Hollister},
+    year = {2013},
+    note = {R package version 1.0},
+    url = {http://www.github.com/USEPA/lakemorpho},
+  }
 
 @article{diaz2006gene,
   title={Gene selection and classification of microarray data using random forest},
@@ -788,6 +803,17 @@
   year={2001},
   publisher={Springer}
 }
+
+@Article{liaw2002randomForest,
+    title = {Classification and Regression by randomForest},
+    author = {Andy Liaw and Matthew Wiener},
+    journal = {R News},
+    year = {2002},
+    volume = {2},
+    number = {3},
+    pages = {18-22},
+    url = {http://CRAN.R-project.org/doc/Rnews/},
+  }
 
 @article{smith1999eutrophication,
   title={Eutrophication: impacts of excess nutrient inputs on freshwater, marine, and terrestrial ecosystems},
