--- a/hkm2014.md
+++ b/hkm2014.md
@@ -14,7 +14,7 @@ Environmental Determinants of Lake Trophic Status in the Conterminous United Sta
 
 Abstract
 --------
-Productivity of lentic ecosystems has been well studied and predicting the algal community response is known to be largely a function of nitrogen and phosphorus.   Most existing predictive models take advantage of this well studied relationship to predict chlorphyl a and lake trophic state.  While this provides reliable predictions, it requires *in situ* water quality data in order to paramterize the model.  This limits the application of these models to lakes with existing and, more importanly, available water quality data.  To expand our ability to predict in lakes without water quality data, we take advantage of the availability of a large national lakes water quality database, land use/land cover data, lake morphometry data, other universally available data, and modern data mining approaches to build and assess alternative models of lake tropic state that may be more universally applied.  We use random forests and random forest variable selection to identify variables to be used for predicting trophic status and we compare the classification accuracy of a variety of existing and novel models.  Adding in additional variables to the classic models of Chlorophyl *a* based trophic state improves predictions only by a small percentage.  Models based on nutrients alone predict trophic state with and average of XX% accuracy.  Models build with universally available data alone are able to correctluy predict trophic state, on average, xx% of the time.   
+Productivity of lentic ecosystems has been well studied and predicting the algal community response is known to be largely a function of nitrogen and phosphorus.   Most existing predictive models take advantage of this well studied relationship to predict chlorphyl a and lake trophic state.  While this provides reliable predictions, it requires *in situ* water quality data in order to paramterize the model.  This limits the application of these models to lakes with existing and, more importanly, available water quality data.  To expand our ability to predict in lakes without water quality data, we take advantage of the availability of a large national lakes water quality database, land use/land cover data, lake morphometry data, other universally available data, and modern data mining approaches to build and assess alternative models of lake tropic state that may be more universally applied.  We use random forests and random forest variable selection to identify variables to be used for predicting trophic status and we compare the classification accuracy of a variety of existing and novel models.  Models based on nutrients alone predict trophic state with and average of XX% accuracy.  Models build with universally available data alone are able to correctluy predict trophic state, on average, xx% of the time.  Adding in additional variables to the classic models of Chlorophyl *a* based trophic state improves predictions only by a small percentage.  These results suggest that when *in situ* data are availble, additional variables do not appreciable improve predictions of trophic state.  Additionally, reliable predictions of trophic state are possible without *in situ* data allowing for a much broader application of trophic state models than has been previously applied.  
 
 
 
@@ -25,25 +25,11 @@ Productivity of lentic ecosystems has been well studied and predicting the algal
 Introduction
 ------------
 
-Productivity in lentic systems is often categorized across a range of tropic states (e.g. the tropic continuum) from early succesional (i.e. oligotrophic)to late successional lakes (i.e. hypereutrophic) [@carlson1977trophic].  Lakes naturally occur across the range of trophic state and higher primary productivity is not necessarily a predictor of poor ecological condition.  Lakes that are naturally oligotrophic occur in nutrient poor areas or have a more recent geologic history.  These lakes are often found in higher elevations, have clear water, and are often favored for drinking water or direct contact recreation (e.g. swimming).   Lakes with higher productivity (e.g. eutrophic lakes) have greater nutrient loads, tend to be less clear, have greater density of aquatic plants, and often support more diverse and abundant fish communities.  Lakes will naturally shift to higher trophic states but this is a slow process.  Given this fact, monitoring trophic state allows the identification of rapid shifts in trophic state or locating lakes with unusually high productivity (e.g. hypereutrophic).  These cases are indicative of lakes under greater anthropogenic nutrient loads, also known as cultural eutrophication, and are more likely to be at risk of fish kills, fouling, and harmful algal blooms[@smith1998cultural;@smith1999eutrophication;@smith2006eutrophication].
-
-Given the association between trophic state and many ecosystem services and disservices, being able to model trophic state could allow for estimating trophic state in unmonitored lakes and provide a first cut at identifying lakes with the potential for harmful algal blooms and other problems associated with cultural eutrophication.  Most prior models related to trophic state are either limited in spatial extent, have data from a small number of lakes, model nutrients or chlorophyll a directly, use measures of trophic state not widely used or focus on in-lake information (i.e. nurients) and not on the landscape-level data.  
-
-For instance, Imboden and G&auml;chter [-@imboden1978dynamic] built a model of primary prodcuction per unit area with a suite of in lake variables and tested this on only three lakes.  Another study by Salas and Martino [-salas1991simplified] focused only on warm water lakes and used a dataset of 27 lakes to build their models.  They included loading coefficients of Phosphorus from the surrounding landscapes in addition to lake morphometry nutrient and cholorphyll *a* concentration, and disssolved oxygen.  They also focus on the scientific and managerial importance of trophic state.  However, the study suffers from data were collected by independent labs with variation in the methods and their focus is on warm-water lakes.    
-
-Lastly, ... xxx found... 
-
-Building on these past efforts, we take advanatage of one the first complete national scale efforts monitoring lakes to try and discern broad patterns in both in-lake parameters that drive trophic state and landscape level parameters that might also drive trophic state
-
-<!-- gear shift to testing against classic models and what data mining brings to the table -->
+Productivity in lentic systems is often categorized across a range of tropic states (e.g. the tropic continuum) from early succesional (i.e. oligotrophic)to late successional lakes (i.e. hypereutrophic) [@carlson1977trophic].  Lakes naturally occur across the range of trophic state and higher primary productivity is not necessarily a predictor of poor ecological condition.  Lakes that are naturally oligotrophic occur in nutrient poor areas or have a more recent geologic history.  These lakes are often found in higher elevations, have clear water, and are often favored for drinking water or direct contact recreation (e.g. swimming).   Lakes with higher productivity (e.g. eutrophic lakes) have greater nutrient loads, tend to be less clear, have greater density of aquatic plants, and often support more diverse and abundant fish communities.  Lakes will naturally shift to higher trophic states but this is a slow process.  Given this fact, monitoring trophic state allows the identification of rapid shifts in trophic state or locating lakes with unusually high productivity (e.g. hypereutrophic).  These cases are indicative of lakes under greater anthropogenic nutrient loads, also known as cultural eutrophication, and are more likely to be at risk of fish kills, fouling, and harmful algal blooms[@smith1998cultural;@smith1999eutrophication;@smith2006eutrophication].  Given the association between trophic state and many ecosystem services and disservices, being able to model trophic state could allow for estimating trophic state in unmonitored lakes and provide a first cut at identifying lakes with the potential for harmful algal blooms and other problems associated with cultural eutrophication.  
 
 Classic models for estimating chlorophyl *a*, and thus trophic state, are linear (or log-linear), and rely solely on nitrogen and phosphorus concentrations.  These well established models were initially developed in ...
 
-- Our primary question is, at the national scale, what are the primary determinants of lake trophic status? 
-- Can those determinants be used to predict trophic state with an acceptable level of accuracy?
-
-Determinants include, chemical and physical parameters of the lake water column and land use/land cover.  Lake trophic status defined by Chl a.
-
+Building on these past efforts, we take advanatage of one the first complete national scale efforts monitoring lakes and widely availble spatial datasets (e.g. land use/land cover, lake morphometry, etc.) to try and discern broad patterns in both in-lake parameters that drive trophic state and landscape level parameters that might also drive trophic state  Our primary questions are: XXXXXXX
 
 Methods
 -------
@@ -52,46 +38,48 @@ Methods
 
 The two primary sources of data for this study are the National Lakes Assessment (NLA) data and the National Land Cover Dataset (NLCD) [@usepa2009national]. Both datasets are national in scale and provide a unique snapshot view of the condition of United States' lakes and the patterns of the lakes surrounding landscape.  
 
-The NLA data were collected during the summer of 2007 and the final data were released in 2009.  With consistent methods and metrics collected at 1056 locations across the conterminous United States, the NLA provides a unique opportunity to examine continental scale patterns in lake productivity.  The NLA collected data on biophysical meausres of lake water quality and habitat.  For this analysis we primarily examined the water quality measurements from the NLA [TABLE REF].
+The NLA data were collected during the summer of 2007 and the final data were released in 2009.  With consistent methods and metrics collected at 1056 locations across the conterminous United States, the NLA provides a unique opportunity to examine continental scale patterns in lake productivity.  The NLA collected data on biophysical meausres of lake water quality and habitat.  For this analysis we primarily examined the water quality measurements from the NLA [TABLE REF].  
 
 
 
 
-Adding to the monitoring data collected via the NLA, we use the 2006 NLCD data to examine the possible landscape-level drivers of trophic status in lakes.  The NLCD is a nationally collected land use land cover dataset that also provides estimates of impervious surface.  We collected total land use land cover and total percent impervious surface within the surroundin landscape of the lake [TABLE REF].  We defined the surrounding landscape of a lake with three different buffer distances: 300 meters, 1500 meters, and 2500 meters.  The various distances were used to tease out differences in local landscape effects versus larger landscape-level effects. 
+Adding to the monitoring data collected via the NLA, we use the 2006 NLCD data to examine the possible landscape-level drivers of trophic status in lakes.  The NLCD is a nationally collected land use land cover dataset that also provides estimates of impervious surface.  We collected total land use land cover and total percent impervious surface within the surroundin landscape of the lake [TABLE REF].  We defined the surrounding landscape of a lake with three different buffer distances: 300 meters, 1500 meters, and 2500 meters.  The various distances were used to tease out differences in local landscape effects versus larger landscape-level effects.  Lastly, lake morphometry is often linked to the productivity of a lake (NEED REF).  To account for this, we included a recently released dataset on lake morphometry (Hollister PUBLISH THIS YOU MOFO). 
 
 ### Defining Trophic State
 
-The dependent variable for this effort is lake trophic state.  Trophic state is usually defined over four levels: oligotrphic, mesotrophic, eutorphic, and hypereutrophic.  Commonly, cut-off values for each of these four levels may be specified with nitrogen concnetration, phosphorus concentration, secchi depth, or chlorphyll a concentration [@carlson1977trophic;@usepa2009national].  As this study is based largely from the NLA we use the NLA definition of trophic state based on the chlorophyll a concentrations (Table).
+The dependent variable for this effort is lake trophic state.  Trophic state is usually defined over four levels: oligotrphic, mesotrophic, eutorphic, and hypereutrophic.  Commonly, cut-off values for each of these four levels may be specified with nitrogen concnetration, phosphorus concentration, secchi depth, or chlorphyll a concentration [@carlson1977trophic;@usepa2009national].  As this study is based largely from the NLA we use the NLA definition of trophic state based on the chlorophyll a concentrations (Table).  Additionally, a common need for managment is to identify lakes that are in the greatest need of managment.  Most of the mangement needs (e.g. cyanobacteria, low disolved oxygen, general HABs, etc.) are associated with the most eutrophic conditions.  As such, we also build models for two classes, hypereutrophic and non-hyperutrophic.
 
-|Trophic State   |Cut-off  |
-|:---------------|:--------|
-|oligotrophic    |<= 0.2   |
-|mesotrophic     |>2-7     |
-|eutrophic       |>7-30    |
-|hypereutrophic  |>30      |
+|Trophic State   |Hypereutrophic Classes  |Cut-off  |
+|:---------------|:-----------------------|:--------|
+|oligotrophic    |Non-Hypereutrophic      |<= 0.2   |
+|mesotrophic     |Non-Hypereutrophic      |>2-7     |
+|eutrophic       |Non-Hypereutrophic      |>7-30    |
+|hypereutrophic  |Hypereutrophic          |>30      |
 
 
-### Variable Selection
+### Predicting Trophic State from Classic Linear Models
 
-A strength of random forest is its ability to handle numerous correlated variables without a decrease in prediction accuracy.   Yet the number of redundant correlated predictor variables in our data requires a cursory reduction through the described variable selection method.  To do this we examine the correlation between log transformed chlorophyll a concentration and each of the log transformed variables.  The rationale behind this selection method is to discard variables with little to no association with chlorphyll a and thus trophic state.  Variables that explained less than 5% of the variance (i.e. a pairwise correlation of less than 0.22) were assumed to not be associated with cholorophyll a concentration and were removed from further consideration.  Additionally, variables measuring different attributes of the same distribution (e.g. minimum, maximum or mean temperature) were selected based on the variable with the strongest corelation with chlorophyll a.  Lastly, the remaining predictor variables that are highly correlated with one another should not be included in the initial set of variables passed to the random forest, unless sepcified by domain knowledge.  As such we examine the pairwise correlations of these remaining variables and make a determination, as determined by knowledge of the system, as to which variables to retain.
+Classic Linear Models of Chl *a*:
+1. Chl *a* ~ TN
+2. Chl *a* ~ TP
+3. Chl *a* ~ TN + TP
 
-### Random Forest
+We use these to predict Chl *a*, then convert observed and predicted Chl *a* to trophic state (Table 1).  We calcualte a confusion matrix and summary stats of the matrix for each of the classic models.
 
-As stated above, our goal is to explore relative variable importance in determination of lake trophic status.  We selected random forest as our statistical analysis approach, becasuse, among other reasons, random forest provides a robust measure of variable importance.  Random forest is a machine learning algorithm that aggregates numerous decision trees in order to obtain a consensus prediction of the response categories.  Bootstrapped sample data is recursively partitioned according to a given random subset of predictor variables and completely grown without pruning.   With each new tree, both the sample data and predictor variable subset is randomly selected.  
+### Predicting Trophic State with Random Forests
 
-This randomization provides an intrinsic means to calculate out-of-bag (OOB) error and variables importance.  
+Random forest is a machine learning algorithm that aggregates numerous decision trees in order to obtain a consensus prediction of the response categories [@breiman2001random].  Bootstrapped sample data is recursively partitioned according to a given random subset of predictor variables and completely grown without pruning.   With each new tree, both the sample data and predictor variable subset is randomly selected.  
 
-All random forest analysis was conducted using R’s randomForest package; for more details see @breiman2001random.
+While random forests are able to handle numerous correlated variables without a decrease in prediction accuracy, unusually large numbers of related variables can reduce accuracy and increase the chances of over-fitting the model.  This is a problem often faced in genetics.  In that field, a variable selection method based on random forest has been succesfully applied (NEED REF).  We use varselRF in R to initially examine the importance of the variables and select a subset, the reduced model, to then pass to random forest. Details on how we conducted the analyses are availble in the R package associated with the manuscript `hkm` availble via Github (citation for Github Repo)
 
-*Variable Importance*
+Using R’s randomForest package, we pass the reduced models selected with varSelRF and calculate confusion matrices, overall accuracy and kappa coeffecient [@liaw2002randomForest].
+ 
 
-- How to use for variable selection
-- what we used to identify important variables
 
-*Predicted Trophic State*
 
-- How random forests makes final predictions, 
-- what we used to assess accuracy, etc.
+
+
+
 
 
 Results
